--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,8 +36,15 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<!--création des filtres de recherche-->
+		<ul class="menu-filtres">	
+			<button class="btn-Tous">Tous</button>
+			<button class="btn-Objets">Objets</button>
+			<button class="btn-Appart">Appartements</button>
+			<button class="btn-Hotel-Restau">Hotels & Restaurants</button>
+		</ul>
 		<div class="gallery">
-			<figure>
+			<!--<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
 			</figure>
@@ -80,7 +87,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure>-->
 		</div>
 	</section>
 	<section id="contact">
