--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
+	<title>Homepage - Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,8 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="login.html">login</a></li>
+			<li><img src="./assets/icons/instagram.png" alt="Instagram" class="logoInsta"></li>
 		</ul>
 	</nav>
 </header>
@@ -37,12 +37,12 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<!--création des filtres de recherche-->
-		<ul class="menu-filtres">	
-			<button class="btn-Tous">Tous</button>
-			<button class="btn-Objets">Objets</button>
-			<button class="btn-Appart">Appartements</button>
-			<button class="btn-Hotel-Restau">Hotels & Restaurants</button>
-		</ul>
+		<div class="menu-filtres">	
+			<button class="btn-Tous btn-choix">Tous</button>
+			<button class="btn-Objets btn-choix">Objets</button>
+			<button class="btn-Appart btn-choix">Appartements</button>
+			<button class="btn-Hotel-Restau btn-choix">Hotels & Restaurants</button>
+		</div>
 		<div class="gallery">
 			<!--<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
@@ -96,7 +96,7 @@
 		<form action="#" method="post">
 			<label for="name">Nom</label>
 			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
+			<label for="email">E-mail</label>
 			<input type="email" name="email" id="email">
 			<label for="message">Message</label>
 			<textarea name="message" id="message" cols="30" rows="10"></textarea>
