recupération des catégorie id/nom de façon dynamique , index html modifié pour retirer les button et les insérer via javascript

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -38,10 +38,11 @@
 		<h2>Mes Projets</h2>
 		<!--création des filtres de recherche-->
 		<div class="menu-filtres">	
-			<button class="btn-Tous btn-choix">Tous</button>
+			<!--<button class="btn-Tous btn-choix">Tous</button>
 			<button class="btn-Objets btn-choix">Objets</button>
 			<button class="btn-Appart btn-choix">Appartements</button>
 			<button class="btn-Hotel-Restau btn-choix">Hotels & Restaurants</button>
+		-->
 		</div>
 		<div class="gallery">
 			<!--<figure>
