mise en place de la couleur de sélection des boutons filtres, suppression de quelques commentaires sur index.html, mise en place du lien mot de passe oublié sur la page login.html

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -34,6 +34,7 @@
             <label for="mdp">Mot de passe</label>
 			<input type="password" name="mot de passe" id="mdp" required>
 			<input type="submit" value="Se connecter">
+			<h3><a href="#" alt="lien mot de passe oublié" class="'link">Mot de passe oublié</a></h3>
 		</form>
 	</section>
 </main>
