--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,13 +9,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
+	<script type="module" src="login.js" defer></script>
+	<script type="module" src="modale.js" defer></script>
+
 </head>
 <body id="loginPage">
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<li><a href="./index.html">projets</a></li>
 			<li>contact</li>
 			<li><strong>login</strong></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram" class="logoInsta"></li>
@@ -24,18 +28,18 @@
 </header>
 <main>
 	
-	
-	
 	<section id="contact">
 		<h2>Log In</h2>
-		<form action="#" method="post">
+		<form  id ="login-form">
 			<label for="email">E-mail</label>
 			<input type="email" name="email" id="email" required>
-            <label for="mdp">Mot de passe</label>
-			<input type="password" name="mot de passe" id="mdp" required>
+            <label for="password">Mot de passe</label>
+			<input type="password" name="password" id="password" required>
 			<input type="submit" value="Se connecter">
-			<h3><a href="#" alt="lien mot de passe oublié" class="'link">Mot de passe oublié</a></h3>
 		</form>
+			<h3><a href="#" alt="lien mot de passe oublié" class="'link">Mot de passe oublié</a></h3>
+	<br>
+		<div id="login-message"></div>
 	</section>
 </main>
 
@@ -46,6 +50,6 @@
 		</ul>
 	</nav>
 </footer>
-<script type="module" src="script.js"></script>
+
 </body>
 </html>
