--- a/FrontEnd/modale.html
+++ b/FrontEnd/modale.html
@@ -1,18 +1,24 @@
+<!--code test pour la MODALE-->
+
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage - Sophie Bluel - Architecte d'intérieur</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/style.css">
     <script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    <a href="#modal1" alt="afficher modale" class="js-modal">Modifier-ouvrir la modale</a>
+    <a href="#modal1" alt="afficher modale" class="js-modal">Modifier</a>
     
-    <aside id="modal1" class="modal" aria-labelledby="titleModal" role="dialog" aria-modal="false" aria-hidden="true" style="display: none;"><!--fond noir-->
-        <div class="fenetre-modal js-stopModal"><!--fenetre blanche-->
-            <div class="js-closeModal"><i class="fa-solid fa-xmark"></i></div> <!-- mettre du texte fermer modale et voir pour bouton-->
+    <aside id="modal1" class="modal" aria-labelledby="titleModal" role="dialog" aria-modal="false" aria-hidden="true" style="display: none;">--fond noir--
+        <div class="fenetre-modal js-stopModal">--fenetre blanche--
+            <div class="js-closeModal"><i class="fa-solid fa-xmark"></i></div> -- mettre du texte fermer modale et voir pour bouton--
             <h2 class="titleModal">Galerie de photo</h2>
             <div class="galerie-modal"></div>
             <hr class="ligneGrise"/>
@@ -20,8 +26,9 @@
         </div>
 
     </aside>
+    <script src="script.js"></script>
     <script src="app.js"></script>
 </body>
-</html>
+</html>-->
 
 
