--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,9 +7,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
+	<script type="module" src="script.js" defer></script>
 	<script type="module" src="login.js" defer></script>
 	<script type="module" src="modale.js" defer></script>
 
