--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,6 +8,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	
+	<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer" />
+
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
 	
@@ -55,6 +62,9 @@
 				<a href="#modal1" alt="afficher modale" class="js-modal">Modifier</a>
 
 
+
+
+
 				<!--MODALE-->
 
 				 <aside id="modal1" class="modal" aria-labelledby="titleModal" role="dialog" aria-modal="false" aria-hidden="true" style="display: none;"><!--fond noir-->
@@ -68,6 +78,9 @@
         			</div>
    				 </aside>
 
+
+
+				 
 			</div>
 		</div>
 		<!--création des filtres de recherche-->
