mise en place de l'ajout de photo, css à revoir ainsi que la poubelle sur les nouvelles images.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -105,7 +105,7 @@
 								<!--champ catégories-->
 								<div class="form-group">
 									<label for="categorie-photo">Catégories</label><br>
-									<select id="categorie-photo" name="categoryId" required>
+									<select id="categorie-photo" name="category" required>
 										<option value=""></option>
 									</select>
 								</div>
