fonction resetmodal mise en place, travail sur fonction suppression des travaux

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -37,7 +37,7 @@
 			<input type="password" name="password" id="password" required>
 			<input type="submit" value="Se connecter">
 		</form>
-			<h3><a href="#" alt="lien mot de passe oublié" class="'link">Mot de passe oublié</a></h3>
+			<h3><a href="#" alt="lien mot de passe oublié" class="link">Mot de passe oublié</a></h3>
 	<br>
 		<div id="login-message"></div>
 	</section>
