mise en place de la fonction checkContenu pour validation dans modale partie previsualisation

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -112,13 +112,13 @@
 									</select>
 								</div>
 								<div id="error-message" style="display: none;color: red;"></div>
-								<button type="submit" class="btn-valider">Valider </button>
+								<button type="submit" disabled class="btn-valider" id="submit">Valider </button>
 							</form>
 							<hr class="ligneGrise"/>
 							<!--<button class="btn-valider">Valider </button>-->
         				</div>
    				 </aside>
-				 
+
 				 
 			</div>
 		</div>
