modification css pour le formulaire et redimension page d'accueil; mise en place RegEx; modification touche valider de la modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -30,6 +30,7 @@
 			<span>Mode édition</span>
 		</div>
 	</div>
+<div class="page-centrale">
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
@@ -151,6 +152,7 @@
 		</form>
 	</section>
 </main>
+</div>
 
 <footer>
 	<nav>
