--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,6 +15,7 @@
 
 </head>
 <body id="loginPage">
+	<div class="page-centrale">
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
@@ -43,7 +44,7 @@
 	
 	</section>
 </main>
-
+</div>
 <footer>
 	<nav>
 		<ul>
