--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,18 +10,17 @@
 	<meta name="description" content="">
 	
 	<link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer" />
+  	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+ 	 integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+ 	 crossorigin="anonymous"
+  	referrerpolicy="no-referrer" />
 
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
+	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous"></script>
 	
-	<script type="module" src="script.js" defer></script>
-	<!--<script type="module" src="data.js" defer></script>-->
-	<script type="module" src="modale.js" defer></script>
-	<script type="module" src="app.js" defer></script>
+	<script type="module" src="script.js"></script>
+	<script type="module" src="modale.js" ></script>
+	<script type="module" src="app.js" ></script>
 </head>
 <body>
 	<div class="hide" id="topBar">
@@ -30,137 +29,130 @@
 			<span>Mode édition</span>
 		</div>
 	</div>
-<div class="page-centrale">
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li id="login" ><a href="login.html">login</a></li>
-			<li id="logout" class="hide"><a href="#" alt="déconnexion">logout</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram" class="logoInsta"></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	<section id="introduction">
-		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<div class="titre-projets">
-			<h2>Mes Projets</h2>
-			<div class="connexion-modale hide">
-				<i class="fa-regular fa-pen-to-square"></i>
-				<a href="#modal1" alt="afficher modale" class="js-modal">Modifier</a>
+	<div class="page-centrale">
+		<header>
+			<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+			<nav>
+				<ul>
+					<li>projets</li>
+					<li>contact</li>
+					<li id="login" ><a href="login.html">login</a></li>
+					<li id="logout" class="hide"><a href="#" aria-label="déconnexion">logout</a></li>
+					<li><img src="./assets/icons/instagram.png" alt="Instagram" class="logoInsta"></li>
+				</ul>
+			</nav>
+		</header>
 
+		<main>
+			<section id="introduction">
+				<figure>
+					<img src="./assets/images/sophie-bluel.png" alt="">
+				</figure>
+				<article>
+					<h2>Designer d'espace</h2>
+					<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+					<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+				</article>
+			</section>
+			
+			<section id="portfolio">
+				<div class="titre-projets">
+					<h2>Mes Projets</h2>
+					<div class="connexion-modale hide">
+						<i class="fa-regular fa-pen-to-square"></i>
+						<a href="#modal1" aria-label="afficher modale" class="js-modal">Modifier</a>
 
+					</div>
+					<!--MODALE-->
 
-
-
-				<!--MODALE-->
-
-				 <aside id="modal1" class="modal" aria-labelledby="titleModal" role="dialog" aria-modal="false" aria-hidden="true" style="display: none;"><!--fond noir-->
-       				<div class="fenetre-modal js-stopModal"><!--fenetre blanche-->
-						<div class="btn-retour" style="display:none;">
-							<i class="fa-solid fa-arrow-left" ></i>
-						</div>
-            			<div class="js-closeModal">
-							<i class="fa-solid fa-xmark"></i>
-						</div> <!-- mettre du texte fermer modale-->
-            			<h2 class="titleModal">Galerie de photo</h2>
-							<!-- **SECTION GALERIE PHOTO MODALE**-->
-						<div id="section-galerie">
-							<div class="galerie-modal"></div>
-							<!-- galerie de photos miniatures avec poubelle qui s'affichent-->
-            				<hr class="ligneGrise"/>
-            				<button class="btnModal">Ajouter une photo</button>
-						</div>
+					<div id="modal1" class="modal" aria-labelledby="titleModal" role="dialog" aria-modal="false" aria-hidden="true" style="display: none;"><!--fond noir-->
+       					<div class="fenetre-modal js-stopModal"><!--fenetre blanche-->
+							<div class="btn-retour" style="display:none;">
+								<i class="fa-solid fa-arrow-left" ></i>
+							</div>
+            				<div class="js-closeModal">
+								<i class="fa-solid fa-xmark"></i>
+							</div> <!-- mettre du texte fermer modale-->
+            				<h2 class="titleModal">Galerie de photo</h2>
+								<!-- **SECTION GALERIE PHOTO MODALE**-->
+							<div id="section-galerie">
+								<div class="galerie-modal">
+								</div>
+            					<hr class="ligneGrise"/>
+            					<button class="btnModal">Ajouter une photo</button>
+							</div>
 
 							<!--SECTION AJOUT PHOTO MODALE-->
-						<div id="section-ajout" style="display:none">		
-							<form id="form-ajout">
-								<!--champ image - chargement des images-->
-								<div class="form-group chargement">
-									<div class="charger-photo" id="charger-photo">
-										<i class="fa-solid fa-image"></i>
-										<button type="button" id="btn-charger"><input type="file" id="charger-fichier" name="image" accept="image/jpeg,image/png" required>+ Ajouter photo</button>
-										<p>jpeg,png : 4mo max</p>
+							<div id="section-ajout" style="display:none">		
+								<form id="form-ajout">
+									<!--champ image - chargement des images-->
+									<div class="form-group chargement">
+										<div class="charger-photo" id="charger-photo">
+											<i class="fa-solid fa-image"></i>
+											<button type="button" id="btn-charger"><input type="file" id="charger-fichier" name="image" accept="image/jpeg,image/png" required>+ Ajouter photo</button>
+											<p>jpeg,png : 4mo max</p>
+										</div>
+										<!--zone de prévisualisation ( masquée , sera visible quand image présente)-->
+										<div id="previsu_container" style="display: none;">
+											<img id="previsu-img" alt="prévisualisation">
+										</div>
 									</div>
-									<!--zone de prévisualisation ( masquée , sera visible quand image présente)-->
-									<div id="previsu_container" style="display: none;">
-									<img id="previsu-img" alt="prévisualisation">
+									<!--champ titre -->
+									<div class="form-group">
+										<label for="titre-photo">Titre</label><br>
+										<input type="text" id="titre-photo" name="title" required>
 									</div>
-								</div>
-								<!--champ titre -->
-								<div class="form-group">
-									<label for="titre-photo">Titre</label><br>
-									<input type="text" id="titre-photo" name="title" required>
-								</div>
-								<!--champ catégories-->
-								<div class="form-group">
-									<label for="categorie-photo">Catégories</label><br>
-									<select id="categorie-photo" name="category" required>
-										<option value=""></option>
-									</select>
-								</div>
-								<hr class="ligneGrise"/>
-								<div id="error-message" style="display: none;color: red;"></div>
-								<button type="submit" disabled class="btn-valider" id="submit">Valider </button>
-							</form>
-							
-							<!--<button class="btn-valider">Valider </button>-->
-        				</div>
-   				 </aside>
+									<!--champ catégories-->
+									<div class="form-group">
+										<label for="categorie-photo">Catégories</label><br>
+										<select id="categorie-photo" name="category" required>
+											<option value=""></option>
+										</select>
+									</div>
+									<hr class="ligneGrise"/>
+									<div id="error-message" style="display: none;color: red;"></div>
+									<button type="submit" disabled class="btn-valider" id="submit">Valider </button>
+								</form>
+        					</div>
+						</div>
+					</div>
+				</div>
 
-				 
-			</div>
-		</div>
-		<!--création des filtres de recherche-->
-		<div class="menu-filtres">	
-			<!--<button>
-			</button>
-			-->
-		</div>
-		<div class="gallery">
-			<!--<figure>
-				<img >
-				<figcaption></figcaption>
-			</figure>	
-			-->
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">E-mail</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
-</main>
-</div>
+				<!--création des filtres de recherche et affichage de la galerie-->
+				<div class="menu-filtres">	
+				<!--<button></button>-->
+				</div>
 
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+				<div class="gallery">
+				<!--<figure><img ><figcaption></figcaption></figure>-->
+				</div>
+
+			</section>
+	
+			<section id="contact">
+				<h2>Contact</h2>
+				<p>Vous avez un projet ? Discutons-en !</p>
+				<form action="#" method="post">
+					<label for="name">Nom</label>
+					<input type="text" name="name" id="name">
+					<label for="email">E-mail</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer">
+				</form>
+			</section>
+		</main>
+	</div>
+
+	<footer>
+		<nav>
+			<ul>
+				<li>Mentions Légales</li>
+			</ul>
+		</nav>
+	</footer>
 
 </body>
 </html>
