--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,10 +8,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" defer></script>
-	<script type="module" src="script.js" defer></script>
-	<script type="module" src="login.js" defer></script>
-	<script type="module" src="modale.js" defer></script>
+	<script src="https://kit.fontawesome.com/13fa0a6e06.js" crossorigin="anonymous" ></script>
+	<script type="module" src="script.js" ></script>
+	<script type="module" src="login.js" ></script>
+	<script type="module" src="modale.js" ></script>
 
 </head>
 <body id="loginPage">
@@ -40,7 +40,7 @@
 			<input type="password" name="password" id="password" required>
 			<input type="submit" value="Se connecter">
 		</form>
-			<h3><a href="#" alt="lien mot de passe oublié" class="link">Mot de passe oublié</a></h3>
+			<h3><a href="#" aria-label="lien mot de passe oublié" class="link">Mot de passe oublié</a></h3>
 	
 	</section>
 </main>
